<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    tools:ignore="NestedWeights"
    android:weightSum="12">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/name_label"/>
        <EditText
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:layout_weight="2"
            android:hint="@string/name_placeholder"
            android:id="@+id/name_input"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/lastname_label"/>
        <EditText
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:hint="@string/lastname_placeholder"
            android:layout_weight="2"
            android:id="@+id/lastname_input"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_height="match_parent"
            android:layout_width="20dp"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/gender_label"/>
        <RadioGroup
            android:layout_height="match_parent"
            android:layout_width="30dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:id="@+id/gender_select">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender_male"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender_female"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/gender_other"/>
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/birth_date_label"
            android:textAlignment="center"/>
        <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/caledar_select"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/password_label"
            android:textAlignment="center" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_input"
            android:layout_weight="3"
            android:hint="@string/password_placeholder"
            android:inputType="textPassword"/>
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit_button"
        android:id="@+id/submit_button"
        android:layout_margin="40dp"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/print_label"
        android:visibility="invisible"/>

</LinearLayout>